hphp/hack/test/typecheck/constraint_array_index/after/lambda_arith_called_on_tuple.php
<?hh
function f(): void {
  $f = ($v ==> $v[0+0]);
  $f(tuple(0));
}
